--- a/PetMatch/PetMatch/HomePage.xaml
+++ b/PetMatch/PetMatch/HomePage.xaml
@@ -3,26 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PetMatch.HomePage">
     <ContentPage.Content>
-        <StackLayout Margin="20"  VerticalOptions="Center" >
-
-            <Entry x:Name="usernameEntry"
-               Placeholder="Username"/>
-
-            <Button x:Name="PetBreedingPageButton"
-                Margin="0,10,0,0"
-                Text="Pet Breeding"
-                Clicked="PetBreedingPageButton_Clicked"/>
-
-            <Button x:Name="SignUpButton"
-                Margin="0,10,0,0"
-                Text="REGISTER"
-                Clicked= "SignUpButton_Clicked"/>
-
-
-
-
-
-
+        <StackLayout>
+            <Label Text="Welcome to Xamarin.Forms!"
+                VerticalOptions="CenterAndExpand" 
+                HorizontalOptions="CenterAndExpand" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
