--- a/PetMatch/PetMatch/MainPage.xaml
+++ b/PetMatch/PetMatch/MainPage.xaml
@@ -4,15 +4,18 @@
              xmlns:local="clr-namespace:PetMatch"
              x:Class="PetMatch.MainPage">
 
-    <StackLayout VerticalOptions="Center" Margin="20" >
+    <ScrollView>
+        <StackLayout VerticalOptions="Center" Margin="20" >
+      
 
-
-        <Label Text="Welcome to PETMATCH"
+            <Label Text="Welcome to PETMATCH"
                Margin="0,0,0,20"
                 VerticalOptions="CenterAndExpand" 
                 HorizontalOptions="CenterAndExpand" />
 
-        <Entry x:Name="emailEntry"
+            <Image x:Name="StupidImage" Source="https://petmatchstorage.blob.core.windows.net/petmatchcontainer/petmatchicon.png" />
+
+            <Entry x:Name="emailEntry"
             Placeholder="Email Address"
                Keyboard="Email"/>
         <Entry x:Name="passwordEntry"
@@ -27,7 +30,7 @@
                 Text="REGISTER"
                 Clicked= "SignUpButton_Clicked"/>
 
-
+            
     </StackLayout>
-
+    </ScrollView>
 </ContentPage>
